--- a/DotnetEcommerceApp/appsettings.json
+++ b/DotnetEcommerceApp/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+ "ConnectionStrings": {
+  "DefaultConnection": "Server=NOM4575\\SQLEXPRESS;Database=YourDatabaseName;Trusted_Connection=True;TrustServerCertificate=True;"
 }
+
+
+}
+
